deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: crw-workshop
      app.kubernetes.io/component: crw-workshop
      app.kubernetes.io/instance: crw-workshop
    name: crw-workshop
  spec:
    replicas: 2
    revisionHistoryLimit: 5
    selector:
      deploymentconfig: crw-workshop
    template:
      metadata:
        labels:
          deploymentconfig: crw-workshop
      spec:
        containers:
        - image: crw-workshop
          imagePullPolicy: Always
          name: crw-workshop
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - crw-workshop
        from:
          kind: ImageStreamTag
          name: crw-workshop:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: crw-workshop
      app.kubernetes.io/component: crw-workshop
      app.kubernetes.io/instance: crw-workshop
    name: crw-workshop
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: crw-workshop
      app.kubernetes.io/component: crw-workshop
      app.kubernetes.io/instance: crw-workshop
    name: crw-workshop
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: crw-workshop
      weight: 100
    wildcardPolicy: None
